--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       }
       .tanıtım {
         font-family: 'Permanent Marker', cursive;
+        text-align: center;
       }
       .iletisim{
         text-align: center;
