--- a/index.html
+++ b/index.html
@@ -29,67 +29,8 @@
       rel="stylesheet"
     />
 
-    <style>
-     body{
-      background-color: lightgray;
-     }
-      img {
-        width: 100%;
-      }
+    <link rel="stylesheet" href="style.css">
 
-      .kutu {
-        width: 100%;
-      }
-      .menü {
-        text-align: center;
-        font-family: "Bungee Spice", cursive;
-        font-size: 30px;
-      }
-
-      a {
-        border: 3px solid gray;
-        border-radius: 20px;
-        text-decoration: none;
-        padding: 10px;
-        margin: 10px;
-      }
-
-      i {
-        color: orangered;
-      }
-
-      a:hover {
-        background-color: blue;
-      }
-
-      @media screen and (max-width: 800px) {
-        .menü {
-          font-size: 20px;
-        }
-
-        .kutu {
-          width: 95%;
-        }
-      }
-
-      @media screen and (max-width: 580px) {
-        .menü {
-          font-size: 15px;
-        }
-
-        .kutu {
-          width: 90%;
-        }
-      }
-      .tanıtım {
-        font-family: 'Permanent Marker', cursive;
-        text-align: center;
-      }
-      .iletisim{
-        text-align: center;
-        margin: 20px;
-      }
-    </style>
   </head>
   <body>
     <nav class="menü">
