--- a/sablon.html
+++ b/sablon.html
@@ -20,56 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap"
       rel="stylesheet"
     />
-    <style>
-        .kutu{
-            width: 100%;
-        }
-      .menü {
-        text-align: center;
-        font-family: "Bungee Spice", cursive;
-        font-size: 30px;
-      }
-
-      a {
-        border: 3px solid gray;
-        border-radius: 20px;
-        text-decoration: none;
-        padding: 10px;
-        margin: 10px;
-      }
-
-      i {
-        color: orangered;
-      }
-
-      a:hover {
-        background-color: blue;
-      }
-
-      @media screen and (max-width: 800px) {
-        .menü {
-          font-size: 20px;
-        }
-
-        .kutu{
-            width: 95%;
-        }
-      }
-
-      @media screen and (max-width:580px) {
-        .menü {
-          font-size: 15px;
-        }
-
-        .kutu{
-
-            width: 90%;
-
-        }
-
-       
-      }
-    </style>
+   <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav class="menü">
