--- a/Yazılım.html
+++ b/Yazılım.html
@@ -17,25 +17,46 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap"
       rel="stylesheet"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap"
       rel="stylesheet"
     />
-   <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Michroma&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="style.css" />
+
+    
   </head>
   <body>
-    <nav class="menü">
-      <h1>Yunus Emre Öztürk</h1>
-      <div class="kutu">
-        <a href="index.html"><i class="fa-solid fa-house-user"></i> Anasayfa</a>
 
-        <a href="yazılım.html"><i class="fa-solid fa-code"></i> Yazilim</a>
-      </div>
+      <header>
+      <h1>Yunus Emre Öztürk</h1>
+    </header>
+    <nav class="menü">
+      <a href="index.html"><i class="fa-solid fa-house-user"></i> Anasayfa</a>
+      
+      <a href="yazılım.html"><i class="fa-solid fa-code"></i> Yazılım</a>
     </nav>
     <br />
     <hr />
