--- a/index.html
+++ b/index.html
@@ -17,44 +17,59 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap"
       rel="stylesheet"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Michroma&display=swap"
+      rel="stylesheet"
+    />
 
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="menü">
+    <header>
       <h1>Yunus Emre Öztürk</h1>
-      <div class="kutu">
-        <a href="index.html"><i class="fa-solid fa-house-user"></i> Anasayfa</a>
-        <a href="yazılım.html"><i class="fa-solid fa-code"></i> Yazilim</a>
-      </div>
+    </header>
+
+    <nav class="menü">
+      <a href="index.html"><i class="fa-solid fa-house-user"></i> Anasayfa</a>
+      
+      <a href="yazılım.html"><i class="fa-solid fa-code"></i> Yazılım</a>
     </nav>
     <br />
     <hr />
 
-    <img src="resimler/background.jpg" alt="background" />
-    <br /><br />
-    <hr />
-    <p class="tanıtım">
-      Merhaba, ben Yunus Emre Öztürk 1998 yılında Adıyaman da doğdum eğitimime buradan devam edip Adıyaman Üniversitesi Bilgisayar
-      Programcılığını kazandım ve  mezun oldum 24 yaşındayım kitap okumayı dizi izlemeyi
-      seviyor ve kendimi Frontend alanında geliştirmeye çalışıyorum....
-    </p>
-    <div class="iletisim">
-        <a   href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a    href="#"><i class="fa-brands fa-github"></i></a>
-        <a    href="#"><i class="fa-brands fa-twitter"></i></a>
-    </div>
+    <article>
+      <p class="tanıtım">
+        Merhaba, ben Yunus Emre Öztürk 1998 yılında Adıyaman da doğdum eğitimime
+        buradan devam edip Adıyaman Üniversitesi Bilgisayar Programcılığını
+        kazandım ve mezun oldum 24 yaşındayım kitap okumayı dizi izlemeyi
+        seviyor ve kendimi Frontend alanında geliştirmeye çalışıyorum....
+      </p>
+
+      <img src="resimler/background.jpg" alt="background" />
+      <br /><br />
+      <hr />
+    </article>
+    <footer>
+      <div class="iletisim">
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+      </div>
+    </footer>
   </body>
 </html>
