--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <nav class="menü">
       <a href="index.html"><i class="fa-solid fa-house-user"></i> Anasayfa</a>
       
-      <a href="yazılım.html"><i class="fa-solid fa-code"></i> Yazılım</a>
+      <a class="sag" href="yazılım.html"><i class="fa-solid fa-code"></i> Yazılım</a>
     </nav>
     <br />
-    <hr />
+    <hr>
 
     <article>
       <p class="tanıtım">
@@ -62,13 +62,13 @@
 
       <img src="resimler/background.jpg" alt="background" />
       <br /><br />
-      <hr />
+      
     </article>
     <footer>
       <div class="iletisim">
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-brands fa-github"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a class="a" href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a class="b" href="#"><i class="fa-brands fa-github"></i></a>
+        <a class="c" href="#"><i class="fa-brands fa-twitter"></i></a>
       </div>
     </footer>
   </body>
