--- a/Yazılım.html
+++ b/Yazılım.html
@@ -56,7 +56,7 @@
     <nav class="menü">
       <a href="index.html"><i class="fa-solid fa-house-user"></i> Anasayfa</a>
       
-      <a href="yazılım.html"><i class="fa-solid fa-code"></i> Yazılım</a>
+      <a class="sag" href="yazılım.html"><i class="fa-solid fa-code"></i> Yazılım</a>
     </nav>
     <br />
     <hr />
@@ -68,5 +68,6 @@
         <li><i class="fa-brands fa-css3-alt"></i> CSS</li>
       </ul>
     </div>
+    <hr>
   </body>
 </html>
